[tool.poetry]
authors = ["mytiaiev <mytiaievyevhen@gmail.com>"]
description = "enviroment for Nifty Bridge"
name = "pyprojet-toml"
packages = [{include = "pyprojet"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
langchain = "^0.0.152"
openai = "^0.27.5"
chromadb = "^0.3.21"
unstructured = "^0.6.2"
pdfminer = "^20191125"
pypdf = "^3.8.1"
tiktoken = "^0.3.3"
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
